<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Subsurface Android Downloader</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_main">Subsurface Android Downloader</string>
    <string name="title_import_progress">Import</string>
    <string name="title_view_file">View Log/Dives</string>
    <string name="title_settings">Settings</string>
    <string name="tv_heading_xmlfilename">Import file name</string>
    <string name="tv_heading_vendor">Vendor</string>
    <string name="tv_heading_product">Product</string>
    <string name="tv_heading_otherpref">Other preferences</string>
    <string name="cb_force_dives">Force download of all dives</string>
    <string name="cb_prefer_dives">Always prefer downloaded dives</string>
    <string name="cb_log_file">Save logfile</string>
    <string name="cb_dump_file">Save dumpfile</string>
    <string name="et_default_logfile">default.log</string>
    <string name="et_default_dumpfile">default.bin</string>
    <string name="et_default_xml">default.xml</string>
    <string name="b_ok">OK</string>
    <string name="b_cancel">Cancel</string>
    <string name="error">Error !!</string>
    <string name="dialog_error_invalid">Invalid values.</string>
    <string name="dialog_error_empty">Empty strings are not allowed.</string>
    <string name="dialog_error_usb">USB Error.</string>
    <string name="dialog_invalid_none">Select at least one option.</string>
    <string name="dialog_invalid_nousb">No USB device is attached.</string>
    <string name="dialog_usb_title">Pick a USB device.</string>
    <string name="dialog_error_usbpermission">No permission to use USB device.</string>
    <string name="dialog_error_openusb">Error opening USB device.</string>
    <string name="dialog_error_usbdenied">Denied permission to use USB device.</string>
    <string name="dialog_error_storage">Storage Error</string>
    <string name="dialog_error_unwritable">External storage not writable.</string>
    <string name="dialog_error_folder">Unable to create folder on external storage.</string>
    <string name="dummy_device_name">USB Device</string>
    <string name="dummy_device_vid">0xFFFF</string>
    <string name="dummy_device_pid">0xFFFF</string>
    <string name="dcdata_invalid_usb">Invalid USB file descriptor.</string>
    <string name="dcdata_error_memory">Memory error.</string>
    <string name="dcdata_null_file">Null filename</string>
    <string name="dcdata_dc_ctx">Error initializing libdivecomputer context.</string>
    <string name="dcdata_dc_desc">No device found with given information.</string>
    <string name="dcdata_error_interrupt">Error interrupting import.</string>
    <string name="dcdata_empty_vendor">Vendor string is empty.</string>
    <string name="dcdata_empty_product">Product string is empty.</string>
    <string name="dcdata_empty_logfile">Log filename string is empty..</string>
    <string name="dcdata_empty_outfile">Xml/dump filename string is empty.</string>
    <string name="dcdata_error_logfile">Logging enabled but logfile name not provided.</string>
    <string name="dcdata_error_dumpfile">Dump is enabled but dumpfile name not provided.</string>
    <string name="dcdata_error_xmlfile">Dive download enabled but xmlfile name not provided.</string>
    <string name="dcdata_error_savedives">Error saving the dives.</string>
    <string name="dcdata_error_parsedives">Error parsing the dives.</string>
    <string name="dcdata_import_error">Error importing from divecomputer.</string>
    <string name="dcdata_import_success">Import successful.</string>
    <string name="dcdata_import_interrupted">Import interrupted.</string>
    <string name="pref_category_divecomputer">Default Divecomputer.</string>
    <string name="pref_category_storage">Storage.</string>
    <string name="pref_category_info">Info.</string>
    <string name="pref_vendor">Default Vendor.</string>
    <string name="pref_product">Default Divecomputer.</string>
    <string name="pref_about">About</string>
    <string name="pref_save_location">Default save location.</string>
    <string name="pref_summ_save_location">The given path is appended to the external storage home.</string>
    <string name="pref_def_save_location">Dives</string>
    <string name="toast_parsing_xml">Loading and parsing old dives.</string>
    <string name="title_activity_about">About</string>
    <string name="about_title">Subsurface Android Downloader</string>
    <string name="about_developer"><b>Developer</b>\t:\tVenkatesh Shukla</string>
    <string name="about_mentor"><b>Mentor</b>\t:\tAnton Lundin</string>
    <string name="about_org"><b>Organisation</b>\t:\tSubsurface</string>
    <string name="about_visit_project">Visit project Github Repo (https://github.com/venkateshshukla/subsurface-android-downloader)</string>
    <string name="about_mail_developer">Email Developer : venkatesh.shukla.eee11@iitbhu.ac.in</string>
    <string name="about_project_desc">This project was undertaken during the
                course of Google Summer of Code 2014. The application is
                useful for downloading of dives from divecomputers,
                processing them and saving it as an xml file. The application
                uses subsurface and libdivecomputer libraries to achieve this.
                Presently only FTDI chipset based divecomputers are supported.</string>
</resources>