<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/pref_category_storage" >
        <EditTextPreference
            android:defaultValue="@string/pref_def_save_location"
            android:dialogTitle="@string/pref_save_location"
            android:key="pref_save_location"
            android:negativeButtonText="@string/b_cancel"
            android:persistent="true"
            android:positiveButtonText="@string/b_ok"
            android:summary="@string/pref_summ_save_location"
            android:title="@string/pref_save_location" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_info" >
        <Preference android:title="@string/pref_about" >
            <intent
                android:targetPackage="org.subsurface.downloader"
                android:targetClass="org.subsurface.downloader.About" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>