<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llOkCancel"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_heading_xmlfilename"
                android:textSize="@dimen/heading3_string_size" />

            <EditText
                android:id="@+id/etXmlFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_default_xml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_heading_vendor"
                android:textSize="@dimen/heading3_string_size" />

            <Spinner
                android:id="@+id/spnVendor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_heading_product"
                android:textSize="@dimen/heading3_string_size" />

            <Spinner
                android:id="@+id/spnProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_heading_otherpref"
                android:textSize="@dimen/heading3_string_size" />

            <CheckBox
                android:id="@+id/cbForce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onCheckboxClicked"
                android:text="@string/cb_force_dives"
                android:textSize="@dimen/content_string_size" />

            <CheckBox
                android:id="@+id/cbPrefer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onCheckboxClicked"
                android:text="@string/cb_prefer_dives"
                android:textSize="@dimen/content_string_size" />

            <LinearLayout
                android:id="@+id/llLogFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/cbLogFile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="49.5"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/cb_log_file"
                    android:textSize="@dimen/content_string_size" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:background="#d0d0d0" />

                <EditText
                    android:id="@+id/etLogFile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:enabled="false"
                    android:text="@string/et_default_logfile"
                    android:textSize="@dimen/content_string_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDumpFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/cbDumpFile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="49.5"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/cb_dump_file" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:background="#d0d0d0" />

                <EditText
                    android:id="@+id/etDumpFile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:enabled="false"
                    android:text="@string/et_default_dumpfile"
                    android:textSize="@dimen/content_string_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llOkCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onOkClicked"
            android:text="@string/b_ok" />

        <Button
            android:id="@+id/bCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onCancelClicked"
            android:text="@string/b_cancel" />
    </LinearLayout>

</RelativeLayout>